www/map-app/styles/style.css
/* ... */
.sea-directory-list .sea-field-am110 {
  border-color: var(--olive) !important;
}

.awesome-marker-icon-am110 {
  background-position: -180px 0;
}

/* Reduce, Reuse, Repair & Recycle. */
.sea-initiatives-list-sidebar.sea-field-am120,
.sea-field-am120 .sea-initiatives-list-sidebar-content,
.sea-field-am120:hover,
.sea-field-am120.sea-field-active {
  background: var(--gray) !important;
  /* color: var(--yellow-contrast) !important; */
}

.sea-directory-list .sea-field-am120 {
  border-color: var(--gray) !important;
}

.awesome-marker-icon-am120 {
  background-position: -612px 0;
}

/* Sidebar */

.sea-sidebar {
  position: absolute;
  width: var(--sidebar-width);
  height: 100%;
  top: 0;
  bottom: 0;
  transform: translateX(-100%);
  transition: transform 0.16s cubic-bezier(0.215, 0.61, 0.355, 1);
  font-family: var(--sea-font-family-sans-serif);
  font-weight: 300;
  color: var(--dark);
  background: white;
}

.sea-sidebar-open {
  transform: translateX(0);
}

.sea-main-sidebar,
.sea-initiatives-list-sidebar,
.sea-initiative-sidebar {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
  display: flex;
  flex-direction: column;
  background-color: white;
}

.sea-main-sidebar {
  z-index: inherit; /* attempt to stop scrollbar showing through */
}

.sea-initiatives-list-sidebar-content,
.sea-initiative-sidebar-content {
  display: flex;
  flex-direction: column;
  padding: 0 0 1.4em;
  font-weight: 400;
}
.sea-initiatives-list-sidebar-content {
  height: 100%;
}
.sea-main-sidebar-inner {
  flex: 0 0 auto;
}

.sea-initiative-non-geo {
  color: gray;
  font-style: italic;
}

.sea-initiative-sidebar-content {
  padding: 0;
}

.sea-initiative-sidebar {
  z-index: 200;
  transform: translateX(-100%);
}

.sea-sidebar-open.sea-sidebar-list-initiatives .sea-initiatives-list-sidebar {
  transform: translateX(var(--sidebar-width));
}

.sea-initiatives-list-sidebar {
  right: 0;
  background-color: var(--dark);
  color: white;
}

.sea-initiatives-list-sidebar,
.sea-initiative-sidebar {
  transition: transform 0.16s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.sea-sidebar h1 {
  font-weight: 700;
  font-size: 1.6rem;
}

.sea-sidebar h2 {
  font-weight: 700;
  font-size: 1.4rem;
}

.sea-sidebar h2.sea-field {
  padding: 0.5rem 1rem 0.7rem;
  margin: 0;
  line-height: 1.3;
  font-size: 1.3rem;
}

.sea-sidebar h3 {
  font-weight: 600;
  font-size: 1.2rem;
}

/* Map */
.map-app-display-container {
  z-index: 30;
}

div.map-app-map-container {
  overflow: hidden;
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  z-index: 10;
}

.map-app-sidebar-button {
  position: absolute;
  left: 100%;
  z-index: -1;
  margin-top: 1em;
}

.map-app-sidebar-button button {
  padding: 0 0.45em;
  font-size: 2.4em;
  background-color: var(--teal);
  color: white;
  transition: all 0.16s;
  transform: translateX(-3px);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
}

.w3-btn:hover {
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
  transform: translateX(0px);
}

.map-app-sidebar-header {
  display: flex;
  justify-content: flex-start;
  background: white;
  color: var(--dark);
  font-size: 1.4em;
}

.sidebar-button {
  flex-shrink: 0;
  font-size: 1.4rem;
}

.w3-button:hover {
  color: white !important;
  background-color: var(--dark) !important;
}

.w3-btn:focus,
.w3-button:focus {
  outline: none;
}

.map-app-sidebar-fixed-section {
  background-color: white;
}

.map-app-sidebar-scrollable-section {
  position: relative;
  flex: 1 1 auto;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
}

.sea-directory-list,
.sea-initiative-list {
  list-style: none;
  font-size: 1.05em;
  padding: 0;
  margin: 0 0 1.6em;
}

.sea-initiative-list {
  margin: 0;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.sea-directory-list li,
.sea-initiative-list li {
  margin: 0;
  padding: 0.4rem 1rem 0.4rem 1.25rem;
  user-select: none;
}

.sea-directory-list li:hover,
.sea-field-active {
  color: white;
  background-color: var(--dark);
  cursor: pointer;
  /* font-weight: 400; */
}

.sea-initiative-list li:hover,
.sea-sidebar h2.sea-field:hover {
  color: var(--dark);
  background-color: white;
  cursor: pointer;
}

.sea-initiative-active {
  color: var(--dark);
  background-color: white;
}

.sea-search-initiative-active {
  color: white;
  background-color: var(--dark);
}

.ml-auto {
  margin-left: auto;
}

.mr-auto {
  margin-right: auto;
}

.m-auto {
  margin: auto;
}

.map-app-search-form {
  max-width: 300px;
  width: 100%;
}

.sea-sidebar,
.w3-modal {
  z-index: 40;
}

/* Sidebar & Popup */
.sea-initiative-popup .sea-initiative-details,
.sea-initiative-sidebar .sea-initiative-details {
  padding: 1em 1.5em;
  background: white;
}

.sea-initiative-popup .sea-initiative-contact,
.sea-initiative-sidebar .sea-initiative-contact {
  padding: 1em 1.5em 1.5em;
  background: #f0f0f0;
}

/* Sidebar */
.sea-initiative-sidebar .sea-initiative-details {
  padding-top: 0;
}

/* Popup */

div.leaflet-popup-content {
  /* NB also requires setting maxWidth in leaflet Marker bindpopup, to make popup wide enough for big text */
  /* 200% works well for presentations: */
  /*font-size: 200%; */
  max-height: 210px;
}

.sea-initiative-popup .leaflet-popup-content-wrapper {
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
  border-radius: 6px;
  padding: 0;
}

.sea-initiative-popup .leaflet-popup-content {
  display: flex;
  flex-direction: row;
  margin: 0;
}

.sea-initiative-popup .sea-initiative-details {
  max-height: 400px;
  width: 66%;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  padding: 1em 1.5em;
  border-radius: 6px 0 0 6px;
  background: white;
}

.sea-initiative-popup .sea-initiative-contact {
  flex-grow: 1;
  padding: 1em 1.5em 1.5em;
  border-radius: 0 6px 6px 0;
  background: #f0f0f0;
}
/* ... */

